--- a/style.css
+++ b/style.css
@@ -62,16 +62,12 @@ span {
 
 .blue-button {
     border-radius: 28px;
-    font-family: Arial;
+ font-family: 'Cantarell', sans-serif;
     color: #ffffff;
     font-size: 20px;
     background: #3498db;
     padding: 10px 20px 10px 20px;
-    text-decoration: none;
-    margin: 20px;
+    margin: 2px;
     height: 50px;
 }
 
-.blue-button:hover {
-    background: #3cb0fd;
-}
